Ensured that the database links up correctly with the backend